# JsonCompare

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  deploy.sh  poetry.toml  pyproject.toml  pytest.sh  requirements.txt  setup.py
jsoncompare/: __init__.py  compare.py  config.py  differs.py  errors.py  ignore.py  utils.py
jsoncompare/data/: config.json
jsoncomparison/: __init__.py  compare.py  config.py  errors.py  ignore.py
tests/: __init__.py  test_compare.py  test_config.py  test_ignore.py  test_utils.py
tests/compare/: __init__.py  test_compare.py
tests/compare/data/: actual.json  config.json  diffs.json  rules.json
tests/data/: expected.json  rules.json  transformed.json
tests/ignore/: __init__.py  test_ignore.py
tests/ignore/data/: actual.json  rules.json
