[tool.poetry]
name = "jsoncomparison"
version = "1.1.0"
description = "json compare utility"
license = "MIT"
authors = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
maintainers = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
readme = "README.md"
homepage = "https://pypi.org/project/jsoncomparison"
repository = "https://github.com/rugleb/JsonCompare"
documentation = "https://github.com/rugleb/JsonCompare/blob/master/README.md"
keywords = [
    "json",
    "compare",
]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
add-trailing-comma = "^3.1"
bandit = "^1.7"
codecov = "^2.1"
coverage = "^7.3"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.7"
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-sugar = "^0.9"
twine = "^4.0"

[tool.pytest.ini_options]
addopts = "--cov-report term --cov-report html --cov-report xml"

[tool.coverage.report]
ignore_errors = false
skip_covered = true
fail_under = 85

[tool.coverage.html]
directory = ".reports/coverage/html"

[tool.coverage.xml]
output = ".reports/coverage/index.xml"

[tool.isort]
atomic = true
case_sensitive = true
combine_star = true
include_trailing_comma = true
indent = 4
line_length = 79
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
